inversify example modification
